--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,16 +1,20 @@
 <div class="container">
-  <h1>Hi! My name's Julian</h1>
-  <br>
-  <p>This is me in a nutshell</p>
-  <img src="/assets/mk85yjfwo80y.jpg" alt="nutshell" style="height:200px">
-  <br>
-  <br>
-    <ul>
-      <li>Born and raised in Munich, Germany</li>
-      <li>Half-American, Half-German</li>
-      <li>Went to college in New York City and Munich</li>
-      <li>Studied art history</li>
-      <li>Loves to sing</li>
-      <li>And now learning to code!</li>
-    </ul>
+  <div class="column justify-content-center">
+    <h1>Hi! My name's Julian</h1>
+    <br>
+    <p>This is me in a nutshell</p>
+<!--     <img src="/assets/mk85yjfwo80y.jpg" alt="nutshell" style="height:200px">
+ -->
+      <ul>
+        <li>Born and raised in Munich, Germany</li>
+        <li>Half-American, Half-German</li>
+        <li>Went to college in New York City and Munich</li>
+        <li>Studied art history</li>
+        <li>Loves to sing and draw</li>
+        <li>And now learning to code!</li>
+      </ul>
+      <br>
+
+      <h2>Projects</h2>
+  </div>
 </div>
