--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,30 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: white;
+  background-color: #89BEE8;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  box-shadow: 0px 7px 7px 1px rgba(0,0,0,0.15);
+  z-index: 2000;
+  height: 75px;
+  a:not(.dropdown-item){
+    color: white;
+    font-weight: 500;
+    opacity: 0.8;
+    transition: opacity 150ms ease-in;
+    &.nav-link{
+      color: white !important;
+      text-shadow: 1px 1px 1px rgba(0,0,0,0.1);
+    }
+    &:hover{
+      // font-weight: 600;
+      opacity: 1;
+    }
+    &.btn-outline-light:hover{
+      background: transparent;
+    }
+  }
 }
 
 .navbar-lewagon .navbar-collapse {
