add banner and avatar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,10 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background-color: #89BEE8;
+  background-color: #77a0d7;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
-  box-shadow: 0px 7px 7px 1px rgba(0,0,0,0.15);
   z-index: 2000;
   height: 75px;
   a:not(.dropdown-item){
