--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,8 +1,15 @@
+<%= render 'shared/navbar' %>
+<div class="banner" style="background-color: #77a0d7;">
+  <img class="avatar-large" alt="avatar-large" src= <%= image_path "avatar-image.jpg" %> />
+  <h1>Hi, I'm Julian</h1>
+  <br>
+  <h2>Welcome to my portfolio</h2>
+</div>
+
 <div class="container">
   <div class="column justify-content-center">
-    <h1>Hi! My name's Julian</h1>
     <br>
-    <p>This is me in a nutshell</p>
+    <p>About me (Write paragraph instead of bullet points!)</p>
 <!--     <img src="/assets/mk85yjfwo80y.jpg" alt="nutshell" style="height:200px">
  -->
       <ul>
@@ -16,5 +23,9 @@
       <br>
 
       <h2>Projects</h2>
+      <br>
+      <h2>Stack</h2>
+      <br>
+      <h2>Contact</h2>
   </div>
 </div>
