--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -3,7 +3,8 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 56px;
+  width: 167px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border-radius: 50%;
 }
 .avatar-bordered {
