--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,26 +1,33 @@
 <%= render 'shared/navbar' %>
+
 <div class="banner" style="background-color: #77a0d7;">
-  <img class="avatar-large" alt="avatar-large" src= <%= image_path "avatar-image.jpg" %> />
   <h1>Hi, I'm Julian</h1>
   <br>
-  <h2>Welcome to my portfolio</h2>
+  <h2>Fullstack Web Developer</h2>
 </div>
 
 <div class="container">
   <div class="column justify-content-center">
     <br>
-    <p>About me (Write paragraph instead of bullet points!)</p>
-<!--     <img src="/assets/mk85yjfwo80y.jpg" alt="nutshell" style="height:200px">
- -->
+    <p>About me</p>
+    <div class="item" data-aos="fade-right">
+      <img class="avatar-large" alt="avatar-large" src= <%= image_path "avatar-image.jpg" %> />
+    </div>
       <ul>
-        <li>Born and raised in Munich, Germany</li>
-        <li>Half-American, Half-German</li>
+        <li>Name: Julian Hermann</li>
+        <li>Born in 1989 in Munich, Germany</li>
+        <li>Bilingual (English/German)</li>
         <li>Went to college in New York City and Munich</li>
-        <li>Studied art history</li>
+        <li>Studied English and Art History</li>
         <li>Loves to sing and draw</li>
         <li>And now learning to code!</li>
       </ul>
+      <p>As an art historian turned web developer, I am passionate about creating products that are both useful and visually appealing. Previously, I worked as a researcher at university, then delved into consumer research at a renowned innovation agency. This sparked my decision to learn how to code and build applications in an intense, nine-week bootcamp. Since I am always looking for opportunities to improve my skills and connect, feel free to drop me a line!</p>
       <br>
+
+      <p>
+        <span id="dynamic-typed-text"></span>
+      </p>
 
       <h2>Projects</h2>
       <br>
