--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: #77a0d7;
   background-repeat: no-repeat;
   position: relative;
   min-height: 500px;
