--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,22 +1,56 @@
-.container{
+.container {
   display: flex;
   justify-content: center;
 }
 
-
-* {
-  box-sizing: border-box;
+.about-text {
+  padding: 15px 57px;
+  font-size: 20px;
+  box-shadow: 0px 10px 30px rgba(0,0,0,0.1);
+  border-radius: 4px;
+  margin: 20px 22px;
 }
 
-.item {
-  width: 200px;
+.project {
+  display: flex;
+  background-size: cover;
+  background-position: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin: 10px 10px;
+  width: 400px;
+  border: solid 1px lightgrey;
+  text-align: left;
+  border-radius: 15px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  &:hover {
+    opacity: 0.6;
+    transition: 0.5s;
+  }
+}
+
+.project > img {
   height: 200px;
-  margin: 50px auto;
-  padding-top: 75px;
-  background: #ccc;
-  text-align: center;
-  color: #FFF;
-  font-size: 3em;
+  width: 100%;
+  border-radius: 3px 3px 0 0;
+  object-fit: cover;
 }
+
+
+// * {
+//   box-sizing: border-box;
+// }
+
+// .item {
+//   width: 200px;
+//   height: 200px;
+//   margin: 50px auto;
+//   padding-top: 75px;
+//   background: #ccc;
+//   text-align: center;
+//   color: #FFF;
+//   font-size: 3em;
+// }
 
 
