--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/navbar' %>
 
-<div class="banner" style="background-color: #77a0d7;">
+<div class="banner">
   <img class="avatar-large" alt="avatar-large" src= <%= image_path "avatar-image.jpg" %> />
   <h1>Hi, I'm Julian</h1>
   <br>
@@ -13,36 +13,52 @@
     <h2 style="color: #77a0d7;">About me</h2>
     <div class="item" data-aos="fade-right">
     </div>
-      <ul>
+
+  <!--     <ul>
         <li>Name: Julian Hermann</li>
         <li>Born in 1989 in Munich, Germany</li>
         <li>Bilingual (English/German)</li>
-       <!--  <li>Went to college in New York City and Munich</li>
+        <li>Went to college in New York City and Munich</li>
         <li>Studied English and Art History</li>
         <li>Loves to sing and draw</li>
-        <li>And now learning to code!</li> -->
-      </ul>
-      <p>As an art historian turned web developer, I am passionate about creating products that are both useful and visually appealing. Previously, I worked as a researcher at university, then delved into consumer research at a renowned innovation agency. This sparked my decision to learn how to code and build applications in an intense, nine-week bootcamp. Since I am always looking for opportunities to improve my skills and connect, feel free to drop me a line!</p>
-      <br>
+        <li>And now learning to code!</li>
+      </ul> -->
+
+      <div class="about-text">
+        <p>As an art historian turned web developer, I am passionate about creating products that are both useful and visually appealing. Previously, I worked as a researcher at university, then delved into consumer research at a renowned innovation agency. This sparked my decision to learn how to code and build applications in an intense, nine-week bootcamp. Since I am always looking for opportunities to improve my skills and connect, feel free to drop me a line!</p>
+      </div>
 
       <p>
         <span id="dynamic-typed-text"></span>
       </p>
 
       <h2 style="color: #77a0d7;">Projects</h2>
-        <div style="padding-top: 75px;">
-          <div class="d-flex justify-content-between">
-            <div class="container">
-              <div class="column">
-                <p>NABO - Creating connected neighborhoods</p>
-                <link rel="stylesheet" href="https://www.nabo.world/">
-              </div>
-            </div>
+          <div class="project">
+            <img alt="NABO app" src= <%= image_path "Nabo_screenshot.png" %> />
+            <p>NABO - Creating connected neighborhoods</p>
           </div>
-        </div>
+          <link rel="stylesheet" href="https://www.nabo.world/">
       <br>
-      <h2 style="color: #77a0d7;">Stack</h2>
+      <h2 style="color: #77a0d7;">Stack / Skills</h2>
       <br>
       <h2 style="color: #77a0d7;">Contact</h2>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
