--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,20 +9,10 @@
 
 <div class="container">
   <div class="column justify-content-center">
-    <br>
+
     <h2 style="color: #77a0d7;">About me</h2>
     <div class="item" data-aos="fade-right">
     </div>
-
-  <!--     <ul>
-        <li>Name: Julian Hermann</li>
-        <li>Born in 1989 in Munich, Germany</li>
-        <li>Bilingual (English/German)</li>
-        <li>Went to college in New York City and Munich</li>
-        <li>Studied English and Art History</li>
-        <li>Loves to sing and draw</li>
-        <li>And now learning to code!</li>
-      </ul> -->
 
       <div class="about-text">
         <p>As an art historian turned web developer, I am passionate about creating products that are both useful and visually appealing. Previously, I worked as a researcher at university, then delved into consumer research at a renowned innovation agency. This sparked my decision to learn how to code and build applications in an intense, nine-week bootcamp. Since I am always looking for opportunities to improve my skills and connect, feel free to drop me a line!</p>
@@ -33,17 +23,30 @@
       </p>
 
       <h2 style="color: #77a0d7;">Projects</h2>
-          <div class="project">
-            <img alt="NABO app" src= <%= image_path "Nabo_screenshot.png" %> />
-            <p>NABO - Creating connected neighborhoods</p>
+      <p>NABO - Creating connected neighborhoods</p>
+      <div class="project">
+        <a rel="stylesheet" href="https://www.nabo.world/">
+          <img class="image" alt="NABO app" src= <%= image_path "Nabo_screenshot.png" %> />
+          <div class="overlay">
+            <div class="text">NABO - Creating connected neighborhoods</div>
           </div>
-          <link rel="stylesheet" href="https://www.nabo.world/">
-      <br>
+        </a>
+      </div>
       <h2 style="color: #77a0d7;">Stack / Skills</h2>
-      <br>
       <h2 style="color: #77a0d7;">Contact</h2>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
