--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   flex-direction: column;
   margin: 10px 10px;
-  width: 400px;
+  width: 600px;
   border: solid 1px lightgrey;
   text-align: left;
   border-radius: 15px;
@@ -30,11 +30,39 @@
   }
 }
 
-.project > img {
-  height: 200px;
+.project a > img {
+  object-fit: contain;
   width: 100%;
   border-radius: 3px 3px 0 0;
-  object-fit: cover;
+}
+
+.project p {
+  font-size: 18px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 
